@@ -495,6 +495,8 @@ src/tristatecombo.cpp -text
 src/tristatecombo.h -text
 src/tvlist.cpp -text
 src/tvlist.h -text
+src/tvsettings.cpp -text
+src/tvsettings.h -text
 src/urlhistory.cpp -text
 src/urlhistory.h -text
 src/version.cpp -text
